--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "un-dia-de-furia",
-  "private": false,
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
